Upgrade Surefire Plugin version to 3.5.2